# agents

./: .gitignore  CONTRIBUTING.md  README.md  _core_install.py  _core_registry.py  _core_rollout_init.py  _typos.toml  pyproject.toml  scratch_AGENTS.md
.github/: mlc_config.json
.github/workflows/: lint.yaml  test-acp-registry.yaml  test-ai-sdk-acp.yaml  test-ai-sdk-harness-mimo.yaml  test-ai-sdk-harness.yaml  test-ai-sdk.yaml  test-mimo-acp.yaml  test-mini-computer-agent.yaml  test-mini-swe-acp.yaml  test-mini-swe-code.yaml  test-omnigent.yaml  test-parity.yaml
acp-registry/: AGENTS.md  README.md  pyproject.toml  registry.snapshot.json
acp-registry/scripts/: gen_agents_md.py  refresh_registry.py
acp-registry/src/acp_registry/: __init__.py  catalog.py  register.py
acp-registry/tests/: test_catalog.py  test_register.py
acp/amp-acp/: manifest.toml
acp/auggie/: manifest.toml
acp/autohand/: manifest.toml
acp/claude-agent-acp/: manifest.toml
acp/cline/: manifest.toml
acp/codebuddy-code/: manifest.toml
acp/codex-acp/: manifest.toml
acp/cortex-code/: manifest.toml
acp/corust-agent/: manifest.toml
acp/crow-cli/: manifest.toml
acp/deepagents/: manifest.toml
acp/dimcode/: manifest.toml
acp/dirac/: manifest.toml
acp/factory-droid/: manifest.toml
acp/fast-agent/: manifest.toml
acp/github-copilot-cli/: manifest.toml
acp/glm-acp-agent/: manifest.toml
acp/goose/: manifest.toml
acp/grok-build/: manifest.toml
acp/harvey-lab-harness/: manifest.toml
acp/junie/: manifest.toml
acp/kilo/: manifest.toml
acp/mimo/: manifest.toml
acp/mimo-acp/: README.md  manifest.toml  pyproject.toml
acp/mimo-acp/src/mimo_acp/: register.py
acp/mimo-acp/tests/: test_register.py
acp/mini-swe-acp/: README.md  pyproject.toml
acp/mini-swe-acp/src/mini_swe_acp/: register.py
acp/mini-swe-acp/tests/: test_mini_swe_routing.py  test_mini_swe_submit.py
acp/mini-swe-code/: README.md  pyproject.toml
acp/minion-code/: manifest.toml
acp/mistral-vibe/: manifest.toml
acp/nova/: manifest.toml
acp/openclaw/: manifest.toml
acp/opencode/: manifest.toml
acp/openhands/: manifest.toml
acp/poolside/: manifest.toml
acp/qoder/: manifest.toml
acp/qwen-code/: manifest.toml
acp/sigit/: manifest.toml
acp/stakpak/: manifest.toml
acp/vtcode/: manifest.toml
ai-sdk/: README.md  package-lock.json  package.json
ai-sdk-acp/: README.md  pyproject.toml
ai-sdk-acp/src/ai_sdk_acp/: server.mjs
ai-sdk-harness/: README.md  pyproject.toml
ai-sdk-harness/src/ai_sdk_harness/: server.mjs
ai-sdk/acp/: README.md  pyproject.toml
ai-sdk/acp/src/ai_sdk_acp/: __init__.py  register.py
ai-sdk/acp/tests/: test_register.py  test_wire_parity.py
ai-sdk/acp/tests/fixtures/: summary.json  vanilla-inside.jsonl  vanilla-outside.jsonl  vanilla.jsonl
ai-sdk/harness-claude-code/: README.md  pyproject.toml
ai-sdk/harness-claude-code/src/ai_sdk_harness_claude_code/: __init__.py  register.py  server.mjs
ai-sdk/harness-claude-code/tests/: test_entry_point.py  test_register.py
ai-sdk/harness-codex/: README.md  pyproject.toml
ai-sdk/harness-codex/src/ai_sdk_harness_codex/: __init__.py  register.py  server.mjs
ai-sdk/harness-codex/tests/: test_register.py  test_wire_parity.py
ai-sdk/harness-deepagents/: .gitignore  README.md  pyproject.toml
ai-sdk/harness-deepagents/tests/: test_register.py  test_wire_parity.py
ai-sdk/harness-mimo/: README.md  pyproject.toml
ai-sdk/harness-mimo/src/ai_sdk_harness_mimo/: __init__.py  register.py  server.mjs
ai-sdk/harness-mimo/tests/: _mock_mimo_die.mjs  _mock_mimo_ok.mjs  _mock_mimo_record.mjs  test_inner_child_death.py  test_node_on_path.py  test_proxy_custom_provider.py  test_proxy_no_key_leak.py  test_register.py  test_seed_skip_daytona.py  test_workflow_path_filter.py
ai-sdk/harness-opencode/: README.md  pyproject.toml
ai-sdk/harness-opencode/tests/: test_register.py  test_wire_parity.py
ai-sdk/harness-pi/: README.md  pyproject.toml
ai-sdk/harness-pi/src/ai_sdk_harness/: __init__.py  register.py  server.mjs
ai-sdk/harness-pi/tests/: test_register.py
codex-acp/: manifest.toml
contract/: manifest.py  manifest_schema.json  test_manifest.py  test_manifest_launcher_freshness.py  test_no_duplicate_agent_names.py
docs/: CONTEXT.md  adaptation.md  parity.md  tiers.md
docs/adr/: 0001-unified-agent-contract.md  0002-vanilla-equivalence-wire-parity.md  0003-packaging-versioning-migration.md
gemini/: manifest.toml
mimo/: manifest.toml
mimo-acp/: README.md  manifest.toml  pyproject.toml
mimo-acp/src/mimo_acp/: __init__.py  register.py
mimo-acp/tests/: test_register.py
mini-computer-agent/: README.md  pyproject.toml
mini-computer-agent/src/mini_computer_agent/: __init__.py  core.py
mini-computer-agent/tests/: test_mini_computer.py
mini-swe-acp/: pyproject.toml
mini-swe-acp/src/mini_swe_acp/: __init__.py
mini-swe-code/docs/usage/: opencode_tui.md
omnigent/: README.md  pyproject.toml
omnigent/src/omnigent/: __init__.py  agent.py  register.py  session.py
omnigent/src/omnigent/harnesses/: __init__.py  _aliases.py  _installers.py  _spec.py  antigravity.py  antigravity_native.py  claude_native.py  claude_sdk.py  codex.py  codex_native.py  copilot.py  cursor.py  cursor_native.py  goose.py  goose_native.py  hermes.py  hermes_native.py  kimi.py  kimi_native.py  kiro_native.py  openai_agents.py  opencode_native.py  pi.py  pi_native.py  qwen.py  qwen_native.py
omnigent/src/omnigent/overlay/: __init__.py  _mimo_acp.py  mimo_executor.py  mimo_harness.py
omnigent/tests/: test_cwd.py  test_harnesses.py  test_mimo_acp.py  test_mimo_register.py  test_mimo_trackability.py  test_register.py
openclaw/: manifest.toml
pi-acp/: manifest.toml
skills/adaptation-parity/: SKILL.md
skills/adaptation-parity/scripts/: README.md  acp_capture.mjs  acp_smoke.mjs  mock_upstream.mjs  parity.py  parity_diff.py  path_wire_parity.py  scaffold_ai_sdk_agent.py  test_parity.py
src/benchflow_agents/: __init__.py
src/benchflow_agents/mini_swe/: __init__.py
tests/: test_mini_swe_routing.py  test_mini_swe_submit.py
(+6 files in other folders)
