[project]
name = "benchflow-agents"
version = "0.1.0"
description = "BenchFlow agent integrations (ACP harnesses) maintained outside the core framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "benchflow",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchflow_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["benchflow_agents"]
