[project]
name = "acp-registry"
version = "0.1.0"
description = "Popular Agent Client Protocol (ACP) registry agents, classified and adapted to BenchFlow"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    # >=0.5.2: register.py needs the registry helpers (_js_agent_install,
    # _js_agent_launch, register_agent). benchflow pins litellm to an rc —
    # uv users: --prerelease=allow.
    #
    # NOTE: this floor gets you a clean *install + registration*, but the wired
    # qwen-code agent's happy path additionally needs a benchflow build that has
    # the `acp_model_via_env` flag (proposed in this PR; absent from 0.6.0rc6).
    # Without it, register() logs a warning and qwen-code fails at ACP model
    # configuration (-32603). See README "Verification" and AGENTS.md.
    "benchflow>=0.5.2",
]

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/acp-registry#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_registry"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["acp_registry"]
