[project]
name = "mini-computer-agent"
version = "0.1.0"
description = "A minimal computer-use agent — the computer-use analog of mini-swe-agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    # The agent is pure: one screenshot -> any vision model (litellm) -> one
    # action (xdotool). No benchflow dependency — benchflow's ACP layer serves
    # this agent, not the other way around. (scrot + xdotool are system tools.)
    "litellm>=1.40",
]

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/mini-computer-agent#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_computer_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["mini_computer_agent"]
