[project]
name = "omnigent-benchflow"
version = "0.1.0"
description = "Databricks Omnigent `pi` meta-harness as a BenchFlow agent (non-ACP, session-factory)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    # >=0.5.2: register.py needs the registry helpers (_NODE_INSTALL,
    # _BENCHFLOW_NODE_PREFIX, register_agent). benchflow pins litellm to an rc —
    # uv users: --prerelease=allow.
    #
    # NOTE: this floor gets you a clean *install + registration attempt*, but the
    # agent only RUNS on a benchflow build that carries the session-factory seam
    # (AgentConfig.session_factory + "session-factory" in VALID_PROTOCOLS +
    # rollout._connect_session_factory). That seam is NOT in published 0.6.x;
    # without it register() logs a warning and returns None. See README
    # "Requirements".
    "benchflow>=0.5.2",
]

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/omnigent#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnigent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["omnigent"]
