[project]
name = "mimo-acp"
version = "0.1.0"
description = "MiMo Code (Xiaomi, OpenCode fork) native `mimo acp` server as a BenchFlow ACP agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "benchflow>=0.5.2",
]

# BenchFlow discovers this package automatically (registry entry-point
# autoload): importing the module registers its agents.
[project.entry-points."benchflow.agents"]
mimo-acp = "mimo_acp"

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/acp/mimo-acp#readme"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["mimo_acp"]
