[project]
name = "ai-sdk-acp"
version = "0.1.0"
description = "Vercel AI SDK ToolLoopAgent as a BenchFlow agent — pure-JS ACP server + registration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    # >=0.5.2: register.py needs the registry helpers (_NODE_INSTALL,
    # _BENCHFLOW_NODE_PREFIX, AGENT_ALIASES). benchflow pins litellm to an rc —
    # uv users: --prerelease=allow.
    "benchflow>=0.5.2",
]

# BenchFlow autoloads this (registry entry-point group): a callable value
# is invoked, registering the agents.
[project.entry-points."benchflow.agents"]
ai-sdk-acp = "ai_sdk_acp.register:register"

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/ai-sdk/acp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sdk_acp"]

# server.mjs is package data (read at register time + deployed into the sandbox).
[tool.hatch.build.targets.wheel.force-include]
"src/ai_sdk_acp/server.mjs" = "ai_sdk_acp/server.mjs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["ai_sdk_acp"]
