[project]
name = "ai-sdk-claude-code"
version = "0.1.0"
description = "Vercel AI SDK 7 HarnessAgent (Claude Code) as a BenchFlow ACP agent — experimental (requires a Vercel sandbox)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "benchflow>=0.5.2",
]

# BenchFlow autoloads this (registry entry-point group): a callable value
# is invoked, registering the agents.
[project.entry-points."benchflow.agents"]
ai-sdk-harness-claude-code = "ai_sdk_harness_claude_code.register:register"

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/ai-sdk/harness-claude-code#readme"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sdk_harness_claude_code"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_sdk_harness_claude_code/server.mjs" = "ai_sdk_harness_claude_code/server.mjs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["ai_sdk_harness_claude_code"]
