[project]
name = "ai-sdk-codex"
version = "0.1.0"
description = "Vercel AI SDK 7 HarnessAgent (Codex) as a BenchFlow ACP agent — experimental (requires a Vercel sandbox)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "benchflow>=0.5.2",
]

[project.urls]
Repository = "https://github.com/benchflow-ai/agents"
Documentation = "https://github.com/benchflow-ai/agents/tree/main/ai-sdk/harness-codex#readme"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sdk_harness_codex"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_sdk_harness_codex/server.mjs" = "ai_sdk_harness_codex/server.mjs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["ai_sdk_harness_codex"]
